--- a/package.json
+++ b/package.json
@@ -69,10 +69,14 @@
     "webpack": "5.72.1",
     "webpack-cli": "4.9.2",
     "webpack-dev-server": "4.9.0",
-    "webpack-merge": "5.8.0"
+    "webpack-merge": "5.8.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   },
   "dependencies": {
+    "date-fns": "^2.28.0",
     "json-server": "0.17.0",
-    "react-query": "3.39.0"
+    "react-query": "3.39.0",
+    "redux": "^4.2.0"
   }
 }
